<?xml version="1.0"?>
<package>
  <name>gravity_well</name>
  <version>0.0.1</version>
  <description>3D gravity well golf/artillery
  </description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD3</license>
  <url type="website">https://github.com/lucasw/gravity_well</url>
  <author email="wsacul@gmail.com">Lucas Walter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>ddynamic_reconfigure</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
